Wed Sep 10 16:22:26 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_gc.rb: fix condition.

Wed Sep 10 15:29:46 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (rb_call_info_t): ci->flag becomes 32-bit unsigned int
	  ci->index becomes a 32-bit signed int (from signed long).
	  Reorder for better packing on 64-bit, giving an 8 byte reduction
	  from 104 to 96 bytes for each ci.
	  [Feature #10187]

	* compile.c (new_callinfo, setup_args, iseq_compile_each,
	  iseq_build_from_ary_body): adjust for type changes

	* vm_insnhelper.c (vm_getivar): ditto

Wed Sep 10 15:07:35 2014  Eric Wong  <e@80x24.org>

	* compile.c (rb_iseq_translate_threaded_code):
	  modify in-place w/o copy
	  (rb_vm_addr2insn): new function for debug
	  (rb_iseq_original_iseq): ditto
	  (iseq_set_sequence): assign iseq_encoded directly
	  [Feature #10185]

	* vm_core (rb_iseq_t): move original ->iseq to bottom

	* iseq.c (iseq_free, iseq_free): adjust for new layout
	  (rb_iseq_disasm): use original iseq for dump
	  (iseq_data_to_ary): ditto
	  (rb_iseq_line_trace_each): ditto
	  (rb_iseq_build_for_ruby2cext): use iseq_encoded directly

	* vm_dump.c (rb_vmdebug_debug_print_pre): use original iseq

Wed Sep 10 15:00:11 2014  Eric Wong  <e@80x24.org>

	* time.c (time_mark): remove NULL check
	  (time_memsize): ditto
	  (time_free): remove, use RUBY_TYPED_DEFAULT_FREE instead
	  [Feature #10219]

Wed Sep 10 14:14:57 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (encs enc trans libencs libenc libtrans): force to run
	  enk.mk because common.mk does not know the dependency, but enk.mk
	  knows. [ruby-dev:48530] [Bug #10220]

Wed Sep 10 11:59:10 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat): update rdoc.

Wed Sep 10 11:52:08 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat_internal): rename:
	  * malloc_increase -> malloc_increase_bytes
	  * malloc_limit -> malloc_increase_bytes_limit
	  * oldmalloc_increase -> oldmalloc_increase_bytes