@@ -1,3 +1,8 @@
+Wed Sep 10 17:52:25 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* compile.c (rb_vm_addr2insn): rename to rb_vm_insn_addr2insn
+	  to clear what address.
+
 Wed Sep 10 16:22:26 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* test/ruby/test_gc.rb: fix condition.
